# TestOSG

./: CMakeLists.txt  Main.qml  ModeChooserUI.qml  Note.txt  OsgEarthItem_3D.cpp  OsgEarthItem_3D.h  OsgEarthRenderer_3D.cpp  OsgEarthRenderer_3D.h  README.md  Resource.qrc  SimpleOsgEarthItem.cpp  SimpleOsgEarthItem.h  SimpleOsgEarthItemRenderer.cpp  SimpleOsgEarthItemRenderer.h  StartUpUI.qml  Template.cpp  TestItem.cpp  TestRenderer.cpp  main.cpp  osgearthitem2.cpp  osgearthitem2.h  osgearthrenderer2.cpp  osgearthrenderer2.h  resources.qrc
2D_Handler/: OsgEarthItem_2D.cpp  OsgEarthItem_2D.h  OsgEarthRenderer_2D.cpp  OsgEarthRenderer_2D.h
3D_Handler/: OsgEarthItem_3D.cpp  OsgEarthItem_3D.h  OsgEarthRenderer_3D.cpp  OsgEarthRenderer_3D.h
Views/: 2DViewer_Test.qml  3DViewer_Test.qml
